# TooManyBlocks

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  third_party.txt
dependencies/: CMakeLists.txt
dependencies/glew-2.1.0/: CMakeLists.txt
res/models/: testFly.glb
res/shaders/: 3DwithShadowMap.shader  depth.shader  simpleShader.shader  test3DShader.shader  testTextureShader.shader
res/shaders/3DwithShadowMap/: 3DwithShadowMap.frag  3DwithShadowMap.vert
res/shaders/SSAO_BlurShader/: SSAO_BlurShader.frag  SSAO_BlurShader.vert
res/shaders/SSAO_PassShader/: SSAO_PassShader.frag  SSAO_PassShader.vert
res/shaders/chunkDepthShader/: chunkDepthShader.frag  chunkDepthShader.vert
res/shaders/chunkPosNormaDepthShader/: chunkPosNormaDepthShader.frag
res/shaders/chunkSSAO_GBufferShader/: chunkSSAO_GBufferShader.frag  chunkSSAO_GBufferShader.vert
res/shaders/chunkShader/: chunkShader.frag  chunkShader.vert
res/shaders/depthShader/: depthShader.frag  depthShader.vert
res/shaders/lineShader/: lineShader.frag  lineShader.vert
res/shaders/particleShader/: particleShader.frag  particleShader.vert
res/shaders/particleTFShader/: particleTFShader.vert
res/shaders/resolverShader/: resolverShader.frag
res/shaders/simpleShader/: simpleShader.frag  simpleShader.vert
res/shaders/skeletalMeshShader/: skeletalMeshShader.frag  skeletalMeshShader.vert
res/shaders/test3DShader/: test3DShader.frag  test3DShader.vert
res/shaders/testTextureShader/: testTextureShader.frag  testTextureShader.vert
res/shaders/transparencyBlurShader/: transparencyBlurShader.frag  transparencyBlurShader.vert
res/shaders/transparencyShader/: transparencyShader.frag
src/: .clang-format  main.cpp
src/core/: AppConstants.h  Application.cpp  Application.h
src/core/compatability/: Compatability.h  OpenGLTypeConversion.cpp  OpenGLTypeConversion.h
src/core/datatypes/: AssetHandle.h  BlockTypes.h  DatatypeDefs.h  KeyMouseIO.h  RawBuffer.h  Transform.cpp  Transform.h
src/core/engine/: BitOperations.h  GameInstance.cpp  GameInstance.h  KeyObserver.cpp  KeyObserver.h  MouseObserver.cpp  MouseObserver.h  Observer.h  ParticleSystem.cpp  ParticleSystem.h  Updatable.h
src/core/engine/animation/: Animation.cpp  Animation.h  Timeline.h
src/core/engine/audio/: AudioEngine.cpp  AudioEngine.h
src/core/engine/audio/internal/: AudioEngineDefs.h  AudioPlayback.cpp  AudioPlayback.h
src/core/engine/blueprints/: Blueprint.h  ChunkMeshBlueprint.cpp  ChunkMeshBlueprint.h  SkeletalMeshBlueprint.cpp  SkeletalMeshBlueprint.h  StaticMeshBlueprint.cpp  StaticMeshBlueprint.h
src/core/engine/builders/: ShaderBuilder.cpp  ShaderBuilder.h  SkeletalMeshBuilder.cpp  SkeletalMeshBuilder.h  StaticMeshBuilder.cpp  StaticMeshBuilder.h  TextureBuilder.cpp  TextureBuilder.h
src/core/engine/comp/: MovementComponent.cpp  MovementComponent.h  SceneComponent.cpp  SceneComponent.h
src/core/engine/controllers/: AIController.cpp  AIController.h  Controller.cpp  Controller.h  PlayerController.cpp  PlayerController.h
src/core/engine/entity/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/core/engine/env/: Chunk.cpp  Chunk.h  DirectionalLight.h  Light.cpp  Spotlight.cpp  Spotlight.h  World.cpp  World.h
src/core/engine/env/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Spotlight.cpp  Spotlight.h
src/core/engine/geometry/: BoundingVolume.h  Linetrace.cpp  Linetrace.h
src/core/engine/hittest/: Linetrace.cpp  Linetrace.h
src/core/engine/persistence/: ChunkStorage.cpp  ChunkStorage.h
src/core/engine/physics/: Collision.cpp  Collision.h
src/core/engine/rendering/: BlockToTextureMapping.cpp  BlockToTextureMapping.h  BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  FrustumCulling.cpp  FrustumCulling.h  GLUtils.cpp  GLUtils.h  GPUAssetRegistry.h  LightProcessor.cpp  LightProcessor.h  Line.cpp  Line.h  Mesh.cpp  Mesh.h  MeshCreate.cpp  MeshCreate.h  RenderData.cpp  RenderData.h  Renderable.h  Renderer.cpp  Renderer.h  SSAOProcessor.cpp  SSAOProcessor.h  Scene.h  SceneOptimizing.cpp  SceneOptimizing.h  ShaderPathsConstants.h  SkeletalMesh.cpp  SkeletalMesh.h  SkyBox.h  StaticMesh.cpp  StaticMesh.h  Vertices.h  Wireframe.cpp  Wireframe.h
src/core/engine/rendering/cache/: ShaderCache.cpp  ShaderCache.h
src/core/engine/rendering/lowlevelapi/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderApiObject.cpp  RenderApiObject.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  TransformFeedbackShader.cpp  TransformFeedbackShader.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/core/engine/rendering/mat/: ChunkMaterial.cpp  ChunkMaterial.h  LineMaterial.cpp  LineMaterial.h  Material.cpp  Material.h  ParticleMaterial.cpp  ParticleMaterial.h  SimpleMaterial.cpp  SimpleMaterial.h  SkeletalMaterial.cpp  (+3 more)
src/core/engine/resource/: CachingPolicy.h
src/core/engine/ui/: AboutScreen.cpp  AboutScreen.h  GameOverlay.cpp  GameOverlay.h  MainMenu.cpp  MainMenu.h  Manager.cpp  Manager.h  PauseMenu.cpp  PauseMenu.h  StatScreen.cpp  StatScreen.h  Ui.cpp  Ui.h  UiDialog.cpp  UiDialog.h  UiUtil.cpp  UiUtil.h  Widget.h  WorldSelection.cpp  WorldSelection.h
src/core/engine/worldgen/: PerlinNoise.cpp  PerlinNoise.h
src/core/foundation/log/: Logger.cpp  Logger.h
src/core/foundation/threading/: Future.h  ThreadPool.cpp  ThreadPool.h
src/core/foundation/time/: Timer.cpp  Timer.h
src/core/foundation/util/: PrettyPrint.cpp  SystemMetrics.cpp  Utility.cpp  Utility.h
src/core/log/: Logger.cpp  Logger.h
src/core/platform/audio/: AudioEngine.cpp  AudioEngine.h
src/core/platform/input/: InputManager.h  KeyMouseIO.h
src/core/platform/window/: WindowManager.h
src/core/providers/: Provider.cpp  Provider.h
src/core/threading/: Future.h  ThreadPool.cpp  ThreadPool.h
src/core/util/: BitOperations.h  PrettyPrint.cpp  PrettyPrint.h  SystemMetrics.cpp  SystemMetrics.h  Utility.cpp  Utility.h
(+49 files in other folders)
